tests/__snapshots__/validation-target-wrong-list-item-type-stderr.snap.txt
Error: Item of the 'target' list must be of type string.

  2 |   "target": [
  3 |     "5.2",
  4 |     5.4,
    |     ~~~
  5 |     "latest"
  6 |   ],
  7 |   "testFileMatch": [

      at ./tstyche.config.json:4:5

